<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/user_name_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/blueToothStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0" />

        <Button
            android:id="@+id/blueToothSreach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#3A5FCD"
            android:text="@string/sreach_bluetooth"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/orderEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/orderno_hint"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/printBth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4500"
        android:text="@string/print_btn"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#CD0000"
            android:text="@string/exit_login_btn"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>