<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="400dp"
        android:layout_height="800dp"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="false"
            android:background="#ffffff"
            android:contentDescription="@string/login_icon_text" />

        <EditText
            android:id="@+id/userId"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="@string/user_id_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userPass"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userId"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/user_pass_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userPass"
            android:layout_marginTop="14dp"
            android:background="#545bcb"
            android:text="@string/login_btn"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/saveProfileBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginBtn"
            android:layout_marginTop="10dp"
            android:background="#FF4500"
            android:text="@string/config_btn"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>